--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@fortaine/fetch-event-source": "^3.0.6",
     "@hello-pangea/dnd": "^16.5.0",
     "@modelcontextprotocol/sdk": "^1.0.4",
-    "@next/third-parties": "^14.1.0",
+    "@next/third-parties": "^15.3.0",
     "@svgr/webpack": "^6.5.1",
     "axios": "^1.8.2",
     "clsx": "^2.1.1",
@@ -33,13 +33,14 @@
     "heic2any": "^0.0.4",
     "html-to-image": "^1.11.11",
     "idb-keyval": "^6.2.1",
+    "js-yaml": "^4.1.0",
     "lodash-es": "^4.17.21",
     "markdown-to-txt": "^2.0.1",
     "mermaid": "^10.6.1",
     "nanoid": "^5.0.3",
     "next": "^15.2.4",
     "node-fetch": "^3.3.1",
-    "openapi-client-axios": "^7.5.5",
+    "openapi-client-axios": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
@@ -65,9 +66,9 @@
     "@types/jest": "^29.5.14",
     "@types/js-yaml": "4.0.9",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^20.11.30",
-    "@types/react": "^18.2.70",
-    "@types/react-dom": "^18.2.7",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
     "@types/react-katex": "^3.0.0",
     "@types/spark-md5": "^3.0.4",
     "concurrently": "^8.2.2",
